# rag-demo

./: .env.example  .gitignore  README.md  pyproject.toml
data/: generate_dataset.py  kb_articles.json
demos/: demo1_retrieval.py  demo2_filtering.py  demo3_tracing.py
evals/: eval_set.json  run_evals.py
src/: config.py  embeddings.py  filter_extractor.py  generator.py  indexer.py  reranker.py  retriever.py  sparse.py  tracing.py  utils.py
